crates/keron-lang/tests/corpus/errors/parse/type_alias_missing_pipe.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected `"`, expected `fn`, `for`, `from`, `if`, `reconcile`, `struct`, `type`, `val`, `|`, or end of input
  --> 1:20
  |
1 | type Color = "red" "green"
  |                    ^
